# salestrack-server

./: .gitignore  README.md  cli.py  env.sample  pyproject.toml  requirements.txt
auth/domain/: models.py
auth/entrypoints/: users.py
auth/schemas/: schema.py
auth/utils/: jwt_utils.py
salestrack/: console.py  main.py
salestrack/core/: common.py  config.py  db.py  jwt.py  settings.py
salestrack/databases/: config.py
salestrack/dbconfig/: db_config.py
salestrack/domain/: commands.py  models.py
salestrack/entrypoints/: routes.py
salestrack/schemas/: schema.py
salestrack/service_layer/: helper.py  services.py
salestrack_utils/: pyproject.toml
salestrack_utils/salestrack/addon/databases/: console.py
salestrack_utils/salestrack/core/: settings.py
salestrack_utils/salestrack_utils/addon/databases/: bootstrap.py  console.py
salestrack_utils/salestrack_utils/addon/databases/alembic/: alembic.ini  env.py
salestrack_utils/salestrack_utils/auth/domain/: models.py
salestrack_utils/salestrack_utils/auth/entrypoints/: users.py
salestrack_utils/salestrack_utils/auth/schemas/: schema.py
salestrack_utils/salestrack_utils/auth/utils/: jwt_utils.py
salestrack_utils/salestrack_utils/core/: settings.py  utils.py
salestrackapi/: pyproject.toml
salestrackapi/salestrackapi/: config.py  console.py  main.py
salestrackapi/salestrackapi/core/: config.py
salestrackapi/salestrackapi/dbconfig/: db_config.py
salestrackapi/salestrackapi/domain/: models.py
salestrackapi/salestrackapi/entrypoints/: routes.py
salestrackapi/salestrackapi/service_layer/: helper.py  services.py
salestrackapi/tests/: conftest.py  test_family.py  test_product.py
tests/: conftest.py  test_family.py  test_load_data.py  test_product.py
tests/test_family/: test_add_family.py  test_family.py
