[tool.poetry]
name = "salestrack"
version = "0.1.0"
description = ""
authors = ["ersharad <sharad@krispcallmail.com>"]
readme = "README.md"
packages = [{include = "salestrack"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.112.2"}
uvicorn = {extras = ["standard"], version = "^0.30.6"}
sqlalchemy = "^2.0.32"
fire = "^0.6.0"
psycopg2 = "^2.9.9"
alembic = "^1.13.2"
pydantic-settings = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = "cli:main"
