[tool.poetry]
name = "salestrack"
version = "0.1.0"
description = ""
authors = ["ersharad <sharad@krispcallmail.com>"]
readme = "README.md"
packages = [
    {include = "salestrack"},
    {include = "auth"},
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.112.2"}
uvicorn = {extras = ["standard"], version = "^0.30.6"}
sqlalchemy = "^2.0.32"
fire = "^0.6.0"
psycopg2 = "^2.9.9"
alembic = "^1.13.2"
pydantic-settings = "^2.4.0"
databases = {extras = ["postgresql"], version = "^0.9.0"}
pytest = "^8.3.2"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = "cli:main"
