[tool.poetry]
name = "salestrack_utils"
version = "0.1.0"
description = "Salestrack utilities to provide addon and resources to the application"
authors = ["ersharad <sharad@krispcallmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
