[tool.poetry]
name = "salestrackapi"
version = "0.1.0"
description = ""
authors = ["ersharad <sharad@krispcallmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
salestrack-utils = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
